# controllers/User.js
@@ -6,6 +6,10 @@ var url = require('url');
 var User = require('./UserService');
 
 
+module.exports.forgotPasswordPOST = function forgotPasswordPOST (req, res, next) {
+  User.forgotPasswordPOST(req.swagger.params, res, next);
+};
+
 module.exports.profileGET = function profileGET (req, res, next) {
   User.profileGET(req.swagger.params, res, next);
 };
@@ -16,10 +20,6 @@ module.exports.profilePUT = function profilePUT (req, res, next) {
 
 module.exports.registerPOST = function registerPOST (req, res, next) {
   User.registerPOST(req.swagger.params, res, next);
-};
-
-module.exports.resetPOST = function resetPOST (req, res, next) {
-  User.resetPOST(req.swagger.params, res, next);
 };
 
 module.exports.sendVerifyMail = function sendVerifyMail (req, res, next) {
